--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
   <div class="container">
     <h2>Correct Color Picker</h2>
-    <p>Pick the <b>color</b> of the word shown from the list below it.</p>
+<p>Hello honey have some fun :D</p>  
+  <p>Pick the <b>color</b> of the word shown from the list below it.</p>
     <div class="card">
       <div class="card-header">
         <h3 class="card-title">
